1.4.0 [2014-xx-xx]
 - New types LocalGrad, Jacobian, JacobianInverse, JacobianDeterminant, FacetJacobian*
 - Argument (and TestFunction, TrialFunction) now can have a specified part index for representing block systems
 - Argument (and TestFunction, TrialFunction) now use absolute numbering f.number() instead of relative f.count()
 - Domains can now be created with a Coefficient providing coordinates: Domain(Coefficient(VectorElement("CG", domain, 2))) 
 - New concept Domain: domain = Domain(triangle, geometric_dimension=3, label="MyDomain")
 - New syntax: integrand*dx(domain)
 - New syntax: integrand*dx(1, domain=domain)
 - New syntax: integrand*dx(1, domain_data=domain_data)
 - Using domain instead of cell in many places.
 - Deprecated notation 'cell.n', 'cell.x' etc.
 - Recommended new notation: FacetNormal(domain)
1.3.0 [2014-01-07]
 - Add cell_avg and facet_avg operators, can be applied to a Coefficient or Argument or restrictions thereof
 - Fix bug in cofactor: now it is transposed the correct way.
 - Add cell.min_facet_edge_length
 - Add cell.max_facet_edge_length
 - Simplify 0^f -> 0 if f is a non-negative scalar value
 - Add atan2 function
 - Allow form+0 -> form
1.2.0 [2013-03-24]
 - NB! Using shapes such as (1,) and (1,1) instead of () for 1D tensor quantities I, x, grad(f)
 - Add cell.facet_diameter
 - Add new concept Domain
 - Add new concept Region, which is the union of numbered subdomains
 - Add integration over regions (which may be overlapping by sharing subdomains)
 - Add integration over everywhere
 - Add functions cosh, sinh, tanh, Max, Min
 - Generalize jump(v,n) for rank(v) > 2
 - Fix some minor bugs
1.1.0 [2013-01-07]
 - Add support for pickling of expressions (thanks to Graham Markall)
 - Add shorthand notation A**2 == inner(A, A), special cased for power 2.
 - Add support for measure sum notation f*(dx(0) + dx(3)) == f*dx(0) + f*dx(3)
 - Supporting code for bugfix in PyDOLFIN when comparing test/trial functions