@@ -1,8 +1,10 @@
 1.4.0 [2014-xx-xx]
+ - Introduce notation for the Periodic Table of the Finite Elements
+ - Remove alias for quadrature element
  - New types LocalGrad, Jacobian, JacobianInverse, JacobianDeterminant, FacetJacobian*
  - Argument (and TestFunction, TrialFunction) now can have a specified part index for representing block systems
  - Argument (and TestFunction, TrialFunction) now use absolute numbering f.number() instead of relative f.count()
- - Domains can now be created with a Coefficient providing coordinates: Domain(Coefficient(VectorElement("CG", domain, 2))) 
+ - Domains can now be created with a Coefficient providing coordinates: Domain(Coefficient(VectorElement("CG", domain, 2)))
  - New concept Domain: domain = Domain(triangle, geometric_dimension=3, label="MyDomain")
  - New syntax: integrand*dx(domain)
  - New syntax: integrand*dx(1, domain=domain)
